--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "clean": "ets clean"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "egg": "^2.6.1",
+    "egg-logger": "^1.7.1",
     "egg-passport": "^2.0.1",
     "egg-passport-github": "^1.0.0",
     "egg-scripts": "^2.6.0",
