--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "egg": "^2.6.1",
     "egg-cors": "^2.1.2",
     "egg-logger": "^1.7.1",
+    "egg-mongoose": "^3.1.1",
     "egg-scripts": "^2.6.0",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.0.15",
