--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "egg": "^2.6.1",
     "egg-cors": "^2.1.2",
     "egg-logger": "^1.7.1",
