--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "clean": "ets clean"
   },
   "dependencies": {
-    "@bit/date-fns.date-fns.add-milliseconds": "^2.0.0",
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "cookie": "^0.3.1",
+    "date-fns": "^1.30.1",
     "egg": "^2.20.1",
     "egg-cors": "^2.1.2",
     "egg-logger": "^1.7.1",
