--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "cookie": "^0.3.1",
+    "crawler": "^1.2.0",
     "date-fns": "^1.30.1",
     "egg": "^2.20.1",
     "egg-cors": "^2.1.2",
