--- a/docker/nginx/data/sites_conf/dribbble.woaiso.com.conf
+++ b/docker/nginx/data/sites_conf/dribbble.woaiso.com.conf
@@ -7,7 +7,7 @@ server {
   }
   location /api {
       rewrite ^/api/(.*)$ /$1 break;
-      proxy_pass https://wst-app:7001;
+      proxy_pass http://backend_service:7001;
       proxy_set_header   X-Forwarded-Proto $scheme;
       proxy_set_header   Host              $http_host;
       proxy_set_header   X-Real-IP         $remote_addr;
