--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,20 +1,22 @@
-version: "3"
+version: "3.1"
 services:
 
-  backend_service:
-    container_name: backend_service
-    build: ../
+  api:
+    container_name: api-service
+    build: ../dist
+    depends_on:
+      - mongodb
     ports:
       - 7001:7001
     links:
-      - mongo
+      - mongodb
     environment:
       - PORT=7001
-      - MONGO_URL= mongodb://mongo:27017/wst
 
-  mongo:
-    container_name: mongo
-    image: mongo
+  mongodb:
+    container_name: api-mongodb
+    restart: always
+    image: mvertes/alpine-mongo
     volumes:
       - ./data:/data/db
     ports:
@@ -23,11 +25,11 @@ services:
   nginx:
       container_name: nginx
       depends_on:
-        - mongo
-        - backend_service
+        - mongodb
+        - api
       build: ./nginx
       links:
-        - backend_service
+        - api
       ports:
         - "80:80"
         - "443:443"
