--- a/docker/nginx/data/sites_conf/dribbble.woaiso.com.conf
+++ b/docker/nginx/data/sites_conf/dribbble.woaiso.com.conf
@@ -1,5 +1,6 @@
 server {
   listen 80;
+  server_name dribbble.woaiso.com;
   location / {
         root /data/www/wst-admin;
         # 用于配合 browserHistory使用
@@ -7,7 +8,7 @@ server {
   }
   location /api {
       rewrite ^/api/(.*)$ /$1 break;
-      proxy_pass http://backend_service:7001;
+      proxy_pass http://api:7001;
       proxy_set_header   X-Forwarded-Proto $scheme;
       proxy_set_header   Host              $http_host;
       proxy_set_header   X-Real-IP         $remote_addr;
