--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "typescript": true
   },
   "scripts": {
-    "start:docker": "egg-scripts start --title=wst-server",
+    "start:docker": "bash ./scripts/before_start.sh && egg-scripts start --title=wst-server",
     "start": "egg-scripts start --daemon --title=wst-server",
     "stop": "egg-scripts stop --title=egg-server-wst-egg",
     "dev": "egg-bin dev -r egg-ts-helper/register",
